Fixed letter spacing

--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ body
     margin: 0 2rem;
     font-family: "Red Hat Display", sans-serif;
     font-weight: bold;
+    letter-spacing: 1px;
     cursor: pointer;
 }
 
